# metrics-toolbox

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  constraints-min.txt  index.html  main.py  mkdocs.yml  mock.yaml  objects.inv  pyproject.toml  pyproject.toml.dev  search.html  sitemap.xml
.github/workflows/: publish.yaml  release.yaml  test.yaml
autoapi/metrics_toolbox/: index.html
autoapi/metrics_toolbox/builder/: index.html
autoapi/metrics_toolbox/encoding/: index.html
autoapi/metrics_toolbox/evaluator/: index.html
autoapi/metrics_toolbox/metrics/: index.html
autoapi/metrics_toolbox/plots/: index.html
autoapi/metrics_toolbox/reducers/: index.html
autoapi/metrics_toolbox/spec/: index.html
autoapi/metrics_toolbox/utils/: index.html
autoapi/summary/: index.html
changes/: index.html
docs/: changes.md  index.md
examples/: binary_classification.ipynb  builder.ipynb  custom.ipynb  help.ipynb  regression.ipynb  results.ipynb  usecases.ipynb
metrics_toolbox/: __init__.py  builder.py  encoding.py  evaluator.py  plots.py  spec.py  utils.py
metrics_toolbox/metrics/: base.py  base_metric.py  enums.py  registry.py  results.py  roc_auc_binary.py  roc_auc_class.py  roc_auc_macro.py  roc_auc_micro.py
metrics_toolbox/metrics/classification/: accuracy.py  f1_score_macro.py  f1_score_micro.py  f1_score_target.py  precision_macro.py  (+5 more)
metrics_toolbox/reducers/: enums.py  reducers.py  registry.py
scripts/: publish_to_test_pypi.sh  run_examples.py  run_tests.sh  test_lowest.sh  update_python_badge.py  update_readme.py  update_readme_version.py
search/: search_index.json
tests/: test_builder.py  test_evaluator.py  test_examples.py
tests/metrics/: test_accuracy.py  test_f1_score.py  test_mse.py  test_precision.py  test_recall.py  test_roc_auc.py
(+39 files in other folders)
