[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-toolbox"
version = "0.1.0"
description = "A toolbox for various ML metrics calculations, and visualizations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["metrics_toolbox*"]
